# api_clients_rs

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
api_clients_core/: CHANGELOG.md  Cargo.toml
api_clients_core/src/: errors.rs  executor.rs  lib.rs
api_clients_core/src/executor/: builder.rs
bidask_api_client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
bidask_api_client/src/: api.rs  api_client.rs  client.rs  lib.rs
bidask_api_client/src/api/: req.rs  request.rs  response.rs  rsp.rs  types.rs
bidask_api_client/src/api_client/: builder.rs
bidask_api_client/src/client/: builder.rs
bidask_api_client/tests/: test_api.rs  test_construction.rs
core/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
core/src/: errors.rs  executor.rs  lib.rs
core/src/executor/: builder.rs  rate_limiter.rs
dedust_api_client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
dedust_api_client/src/: api_client.rs  client.rs  lib.rs  v2.rs
dedust_api_client/src/api_client/: builder.rs
dedust_api_client/src/api_v2/: req.rs  request.rs  response.rs  rsp.rs  types.rs
dedust_api_client/src/client/: builder.rs  dedust_api_client.rs  mod.rs
dedust_api_client/src/v2/: response.rs
dedust_api_client/tests/: test_api_v2.rs  test_construction.rs
src/dedust_api_client/: CHANGELOG.md  Cargo.toml  README.md
src/dedust_api_client/src/: api_v2.rs  client.rs  lib.rs
src/dedust_api_client/src/api_v2/: req.rs  rsp.rs  types.rs
src/dedust_api_client/src/client/: config.rs  dedust_api_client.rs  executor.rs
src/dedust_api_client/tests/: test_api_v2.rs
src/stonfi_api_client/: CHANGELOG.md  Cargo.toml  README.md
src/stonfi_api_client/src/: api_v1.rs  client.rs  lib.rs
src/stonfi_api_client/src/api_v1/: dex_req.rs  dex_req_params.rs  dex_rsp.rs  types.rs
src/stonfi_api_client/src/client/: dex_client.rs  executor.rs  stonfi_api_client.rs  v1_dex.rs
src/stonfi_api_client/tests/: test_api_dex.rs
stonfi_api_client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
stonfi_api_client/src/: api_client.rs  client.rs  export.rs  lib.rs  v1.rs  v1_dex.rs
stonfi_api_client/src/api_client/: builder.rs
stonfi_api_client/src/api_v1/: dex_req.rs  dex_rsp.rs  types.rs
stonfi_api_client/src/client/: builder.rs  config.rs  mod.rs  stonfi_api_client.rs  v1_dex.rs
stonfi_api_client/src/export/: request.rs  response.rs  types.rs
stonfi_api_client/src/v1/: actions.rs  req.rs  request.rs  response.rs  rsp.rs  types.rs  v1_client.rs
stonfi_api_client/src/v1_dex/: dex_actions.rs  dex_req.rs  dex_rsp.rs  types.rs  v1_dex_client.rs
stonfi_api_client/tests/: compile.rs  test_api.rs  test_api_dex.rs  test_api_v1.rs  test_construction.rs  test_export.rs
stonfi_api_client/tests/ui/: exhaustive_response_match.rs  exhaustive_response_match.stderr  into_request_response.rs  struct_literal_params.rs  struct_literal_params.stderr  unwrap_response_without_error_import.rs
swap_coffee_api_client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
swap_coffee_api_client/src/: api_client.rs  client.rs  lib.rs  v1.rs
swap_coffee_api_client/src/api_client/: builder.rs
swap_coffee_api_client/src/api_v1/: req.rs  request.rs  response.rs  rsp.rs  types.rs
swap_coffee_api_client/src/client/: builder.rs
swap_coffee_api_client/src/v1/: request.rs  response.rs  types.rs
swap_coffee_api_client/tests/: test_api_v1.rs  test_construction.rs
tonco_api_client/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tonco_api_client/src/: api_client.rs  client.rs  graphql.rs  graphql_client.rs  graphql_schema.json  lib.rs
tonco_api_client/src/api_client/: builder.rs
tonco_api_client/src/client/: builder.rs
tonco_api_client/src/graphql_client/: graphql_req.rs  graphql_rsp.rs  graphql_types.rs  jettons.graphql  pools.graphql
tonco_api_client/tests/: pools.graphql  test_construction.rs  test_graphql.rs
