[workspace]
resolver = "2"

members = [
    "api_clients_core",
    "dedust_api_client",
    "stonfi_api_client",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Sild/api_clients_rs"

[workspace.dependencies]
# Internal
api_clients_core = { path = "./api_clients_core", version = "0.0" }

# External
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio-test = "0.4"
serde_with = "3.14"
serde_qs = "0.13.0"
serde_derive = "1.0"
env_logger = "0.11"
reqwest-retry = "0.7"
reqwest-middleware = "0.4"
