[package]
name = "api_clients_core"
version = "0.2.0"
description = "core API clients features for various services"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true
log.workspace = true
serde_qs.workspace = true
derive_setters.workspace = true
