[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "dedust_api_client"
version = "0.6.0"
description = "API client for Dedust"

[dependencies]
# Internal
api_clients_core.workspace = true

# External
serde.workspace = true
log.workspace = true
tokio.workspace = true
serde_derive.workspace = true
derive_setters.workspace = true

[dev-dependencies]
env_logger.workspace = true
anyhow.workspace = true
