[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "dedust_api_client"
version = "0.7.0"
description = "API client for Dedust"

[dependencies]
# Internal
api_clients_core.workspace = true

# External
serde.workspace = true
log.workspace = true
serde_derive.workspace = true
derive_setters.workspace = true
derive_more.workspace = true

[dev-dependencies]
tokio.workspace = true
env_logger.workspace = true
anyhow.workspace = true
