[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "stonfi_api_client"
version = "0.3.3"
description = "API client for Stonfi"


[dependencies]
# Internal
api_clients_core.workspace = true

# External
serde.workspace = true
log.workspace = true
tokio.workspace = true
serde_derive.workspace = true
serde_with.workspace = true



[dev-dependencies]
tokio-test.workspace = true
env_logger.workspace = true
anyhow.workspace = true
