[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "swap_coffee_api_client"
version = "0.0.1"
description = "API client for swap.coffee"

[dependencies]
# Internal
api_clients_core.workspace = true

# External
serde.workspace = true
log.workspace = true
tokio.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
derive_setters.workspace = true

[dev-dependencies]
env_logger.workspace = true
anyhow.workspace = true
