[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "tonco_api_client"
version = "0.0.1"
description = "API client for TonCo"

[dependencies]
# Internal
api_clients_core.workspace = true

# External
serde.workspace = true
log.workspace = true
tokio.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
derive_setters.workspace = true


[dev-dependencies]
env_logger.workspace = true
anyhow.workspace = true
