[package]
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "dedust_api_client"
version = "0.1.0"
description = "API client for Dedust"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
log.workspace = true
tokio.workspace = true
serde_with.workspace = true
serde_qs.workspace = true
serde_derive.workspace = true
reqwest-retry.workspace = true
reqwest-middleware = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio-test.workspace = true
env_logger.workspace = true
