[package]
name = "stonfi_api_client"
edition.workspace = true
version = "0.0.1"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
log.workspace = true
tokio.workspace = true
serde_with.workspace = true
serde_qs.workspace = true
serde_derive.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true

[dev-dependencies]
tokio-test.workspace = true
env_logger.workspace = true
